force-app/main/default/objects/QuoteLineItem/fields/Destockage__c.field-meta.xml
<CustomField>
    <fullName>Destockage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destockage</label>
    <type>Checkbox</type>
</CustomField>