force-app/main/default/objects/QuoteLineItem/fields/Droit_Proportionnel__c.field-meta.xml
<CustomField>
    <fullName>Droit_Proportionnel__c</fullName>
    <label>Droit Proportionnel (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>