force-app/main/default/objects/QuoteLineItem/fields/Frais_d_immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Frais_d_immatriculation__c</fullName>
    <label>Frais d&apos;immatriculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>