force-app/main/default/objects/QuoteLineItem/fields/N_de_plaque_VO__c.field-meta.xml
<CustomField>
    <fullName>N_de_plaque_VO__c</fullName>
    <label>N° de plaque VO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>