force-app/main/default/objects/QuoteLineItem/fields/Prix_de_vente_CEM__c.field-meta.xml
<CustomField>
    <fullName>Prix_de_vente_CEM__c</fullName>
    <label>Prix de vente CEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>