force-app/main/default/objects/QuoteLineItem/fields/Prix_de_vente_CEM_hors_DP__c.field-meta.xml
<CustomField>
    <fullName>Prix_de_vente_CEM_hors_DP__c</fullName>
    <label>Prix de vente CEM (hors DP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>