force-app/main/default/objects/QuoteLineItem/fields/Prix_public_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_public_TTC__c</fullName>
    <label>Prix public TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>