force-app/main/default/objects/QuoteLineItem/fields/Prix_Total_Options_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_Total_Options_TTC__c</fullName>
    <label>Prix Total Options TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>