force-app/main/default/objects/QuoteLineItem/fields/Prix_vente_Options_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_vente_Options_TTC__c</fullName>
    <label>Prix vente Options TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>