force-app/main/default/objects/QuoteLineItem/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Anouar : j&apos;ai changé le label du champ</description>
    <inlineHelpText>Anouar : j&apos;ai changé le label du champ</inlineHelpText>
    <label>Prix spécial</label>
    <type>Checkbox</type>
</CustomField>