force-app/main/default/objects/QuoteLineItem/fields/Remise_destockage_promo__c.field-meta.xml
<CustomField>
    <fullName>Remise_destockage_promo__c</fullName>
    <label>Remise destockage/promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>