force-app/main/default/objects/QuoteLineItem/fields/Remise_Plancher_VO__c.field-meta.xml
<CustomField>
    <fullName>Remise_Plancher_VO__c</fullName>
    <label>Remise Plancher VO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>